tweak: change the name of the app to gutenlesen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">Book Directory</string>
+    <string name="app_name">Gutenlesen</string>
     <string name="action_settings">Settings</string>
 </resources>
