--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">Gutenlesen</string>
     <string name="action_settings">Settings</string>
+    <string name="input_hint">Enter a book</string>
+    <string name="button_text">Search</string>
 </resources>
