--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="action_settings">Settings</string>
     <string name="input_hint">Enter a book</string>
     <string name="button_text">Search</string>
+    <string name="title_full_view_activity">FullViewActivity</string>
 </resources>
